{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 451,
  "lineage": "1d82c28f-eb77-d0b3-6a68-bb684f4e27ea",
  "resources": [
    {
      "mode": "data",
      "type": "aws_eip",
      "name": "lb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-058783d1543b36ca8",
            "public_dns": "ec2-3-224-176-226.compute-1.amazonaws.com",
            "public_ip": "3.224.176.226",
            "public_ipv4_pool": "amazon"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_route_table",
      "name": "gorilla_rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "associations": [
              {
                "gateway_id": "",
                "main": true,
                "route_table_association_id": "rtbassoc-c790eeb9",
                "route_table_id": "rtb-36c5cb49",
                "subnet_id": ""
              }
            ],
            "filter": null,
            "gateway_id": null,
            "id": "rtb-36c5cb49",
            "owner_id": "652964312899",
            "route_table_id": "rtb-36c5cb49",
            "routes": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-7cd32507",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "subnet_id": null,
            "tags": {},
            "vpc_id": "vpc-a853d0d2"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "gorilla_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:652964312899:vpc/vpc-a853d0d2",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-ff7ee293",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-901438eb",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-a853d0d2",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-36c5cb49",
            "owner_id": "652964312899",
            "state": "available"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "application_elb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:652964312899:loadbalancer/application-elb",
            "availability_zones": [
              "us-east-1d"
            ],
            "connection_draining": true,
            "connection_draining_timeout": 400,
            "cross_zone_load_balancing": true,
            "dns_name": "application-elb-431328161.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:3000/login/",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "application-elb",
            "idle_timeout": 400,
            "instances": [
              "i-0c6f27af3a18fb0e8"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 3000,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "application-elb",
            "security_groups": [
              "sg-0d54d17f742b54868"
            ],
            "source_security_group": "652964312899/elb sg",
            "source_security_group_id": "sg-0d54d17f742b54868",
            "subnets": [
              "subnet-0a04257a3588c6f9a"
            ],
            "tags": {
              "Name": "application-elb"
            },
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_instance.application",
            "aws_security_group.ec2sg",
            "aws_security_group.elbsg",
            "aws_subnet.private_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "jenkins_elb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:652964312899:loadbalancer/jenkins-elb",
            "availability_zones": [
              "us-east-1d"
            ],
            "connection_draining": true,
            "connection_draining_timeout": 400,
            "cross_zone_load_balancing": true,
            "dns_name": "jenkins-elb-726253147.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:8080/login?from=%2F",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "jenkins-elb",
            "idle_timeout": 400,
            "instances": [
              "i-0ec216c8e0b3ebc22"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 8080,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "jenkins-elb",
            "security_groups": [
              "sg-0d54d17f742b54868"
            ],
            "source_security_group": "652964312899/elb sg",
            "source_security_group_id": "sg-0d54d17f742b54868",
            "subnets": [
              "subnet-0a04257a3588c6f9a"
            ],
            "tags": {
              "Name": "jenkins-elb"
            },
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_instance.jenkins",
            "aws_security_group.ec2sg",
            "aws_security_group.elbsg",
            "aws_subnet.private_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "application",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04d29b6f966df1537",
            "arn": "arn:aws:ec2:us-east-1:652964312899:instance/i-0c6f27af3a18fb0e8",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c6f27af3a18fb0e8",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "gorilla",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c1fbaddd637281cc",
            "private_dns": "ip-172-31-2-222.ec2.internal",
            "private_ip": "172.31.2.222",
            "public_dns": "ec2-34-201-28-133.compute-1.amazonaws.com",
            "public_ip": "34.201.28.133",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-06c7dba8e0cc73786",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-06a5ed97703bcf4dc"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a04257a3588c6f9a",
            "tags": {
              "Name": "application"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-06a5ed97703bcf4dc"
            ]
          },
          "dependencies": [
            "aws_security_group.ec2sg",
            "aws_subnet.private_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09ec94dc425ff78b3",
            "arn": "arn:aws:ec2:us-east-1:652964312899:instance/i-0ec216c8e0b3ebc22",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ec216c8e0b3ebc22",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "gorilla",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ab21a1e498e64365",
            "private_dns": "ip-172-31-2-207.ec2.internal",
            "private_ip": "172.31.2.207",
            "public_dns": "ec2-18-234-248-88.compute-1.amazonaws.com",
            "public_ip": "18.234.248.88",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0e1d873a2955ab314",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-06a5ed97703bcf4dc"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a04257a3588c6f9a",
            "tags": {
              "Name": "jenkins"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-06a5ed97703bcf4dc"
            ]
          },
          "dependencies": [
            "aws_security_group.ec2sg",
            "aws_subnet.private_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:652964312899:security-group/sg-06a5ed97703bcf4dc",
            "description": "Allow ssh inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06a5ed97703bcf4dc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http from outside",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http from outside",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh from outside",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "application sg",
            "name_prefix": "",
            "owner_id": "652964312899",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-a853d0d2"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elbsg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:652964312899:security-group/sg-0d54d17f742b54868",
            "description": "Allow http inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d54d17f742b54868",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http from outside",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "elb sg",
            "name_prefix": "",
            "owner_id": "652964312899",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_http"
            },
            "timeouts": null,
            "vpc_id": "vpc-a853d0d2"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:652964312899:subnet/subnet-0a04257a3588c6f9a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.31.2.0/24",
            "id": "subnet-0a04257a3588c6f9a",
            "map_public_ip_on_launch": true,
            "owner_id": "652964312899",
            "tags": {
              "Name": "private subnet"
            },
            "vpc_id": "vpc-a853d0d2"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:652964312899:subnet/subnet-021da9263e3d21ffb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.31.1.0/24",
            "id": "subnet-021da9263e3d21ffb",
            "map_public_ip_on_launch": true,
            "owner_id": "652964312899",
            "tags": {
              "Name": "public subnet"
            },
            "vpc_id": "vpc-a853d0d2"
          }
        }
      ]
    }
  ]
}